feat: add rating sort functionality to restaurant listing